--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,10 @@ application {
     }
 }
 
+run {
+    standardInput = System.in
+}
+
 tasks.named('test') {
     // Use JUnit Platform for unit tests.
     useJUnitPlatform()
